--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 /**
  * 1. Set default font family to sans-serif.
@@ -659,24 +660,103 @@ textarea {
     page-break-after: avoid;
   }
 }
+/*-------Variables/mixin-------*/
+/*-------Début-------*/
 html {
   background-color: #e7e7e7;
 }
 
 body {
-  margin: 0 auto;
+  margin: 3em auto 0 auto;
   width: 60em;
   background-color: red;
 }
 
+/*-------Header-------*/
 header {
   width: 100%;
-  background-color: black;
+  background: #4c4c4c;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #4c4c4c), color-stop(25%, #595959), color-stop(51%, #666666), color-stop(76%, #474747), color-stop(100%, #2c2c2c), color-stop(100%, #1c1c1c), color-stop(100%, #2b2b2b), color-stop(100%, #111111), color-stop(100%, black), color-stop(100%, #131313));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  /* W3C */
   position: fixed;
   left: 0;
   top: 0;
+  color: #c5c5c5;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.5);
+}
+
+header h2 {
+  display: none;
+}
+
+header h1 {
+  font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
+  font-size: 1.25em;
+  display: inline-block;
+  margin: 0 0 0 1em;
+}
+header h1 span {
+  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+  font-size: 0.75em;
+  margin-left: 1em;
+  font-weight: bold;
+  color: #a5a5a5;
+}
+header h1 a {
+  padding: 0.5em;
+}
+
+header a {
+  color: #c5c5c5;
+  text-decoration: none;
+  display: inline-block;
+  transition: background 500ms ease;
+}
+
+header ul {
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin: 0 1em 0 0;
+  padding: 0;
 }
 
 header ul li a {
   display: inline-block;
+  font-size: 1.25em;
+  padding: 0.5em 0.75em;
+}
+
+header ul li {
+  display: inline-block;
+}
+
+header ul li a:hover {
+  background: -moz-linear-gradient(top, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0.5)), color-stop(100%, rgba(255, 255, 255, 0)));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+  /* W3C */
+  transition: background 500ms ease;
+  z-index: 99;
+  color: #eaeaea;
 }
