--- a/css/style.css
+++ b/css/style.css
@@ -661,15 +661,16 @@ textarea {
   }
 }
 /*-------Variables/mixin-------*/
-/*-------Début-------*/
+/*-------Général-------*/
 html {
   background-color: #e7e7e7;
 }
 
 body {
-  margin: 3em auto 0 auto;
+  margin: 4em auto 10em auto;
   width: 60em;
   background-color: red;
+  position: relative;
 }
 
 /*-------Header-------*/
@@ -695,6 +696,7 @@ header {
   color: #c5c5c5;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.5);
+  z-index: 99;
 }
 
 header h2 {
@@ -759,4 +761,23 @@ header ul li a:hover {
   transition: background 500ms ease;
   z-index: 99;
   color: #eaeaea;
+}
+
+/*-------Footer-------*/
+footer {
+  background: #4c4c4c;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #4c4c4c), color-stop(25%, #595959), color-stop(51%, #666666), color-stop(76%, #474747), color-stop(100%, #2c2c2c), color-stop(100%, #1c1c1c), color-stop(100%, #2b2b2b), color-stop(100%, #111111), color-stop(100%, black), color-stop(100%, #131313));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  /* W3C */
+  color: #c5c5c5;
 }
