--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,16 +26,17 @@ background: -ms-linear-gradient(top, rgba(255,255,255,0.5) 0%,rgba(255,255,255,0
 background: linear-gradient(to bottom, rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%); /* W3C */
 }
 
-/*-------Début-------*/
+/*-------Général-------*/
 
 html {
 	background-color: $bgWhite;
 }
 
 body {
-	margin: 3em auto 0 auto;
+	margin: 4em auto 10em auto;
 	width: 60em;
 	background-color: red;
+	position: relative;
 }
 
 /*-------Header-------*/
@@ -49,6 +50,7 @@ header{
 	color: $txtGrey;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	box-shadow: 0 0 5px 5px rgba(0,0,0,0.5);
+	z-index: 99;
 }
 
 header h2{
@@ -105,3 +107,15 @@ header ul li a:hover{
 	z-index: 99;
 	color: $txtWhite;
 }
+
+/*-------Footer-------*/
+
+footer{
+	@include gradient-black;
+	color: $txtGrey;
+	//width: 100%;
+	//position: absolute;
+	//bottom: 0px;
+	//left: 0;
+}
+
