--- a/css/style.css
+++ b/css/style.css
@@ -660,8 +660,8 @@ textarea {
     page-break-after: avoid;
   }
 }
-/*-------Variables/mixin-------*/
-/*-------Général-------*/
+/*------------Variables/mixin------------*/
+/*------------Général------------*/
 html {
   background-color: #e7e7e7;
 }
@@ -669,26 +669,27 @@ html {
 body {
   margin: 4em auto 10em auto;
   width: 60em;
-  background-color: red;
   position: relative;
+  color: #313131;
+  font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
 }
 
-/*-------Header-------*/
+/*------------Header------------*/
 header {
   width: 100%;
   background: #4c4c4c;
   /* Old browsers */
-  background: -moz-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  background: -moz-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%);
   /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #4c4c4c), color-stop(25%, #595959), color-stop(51%, #666666), color-stop(76%, #474747), color-stop(100%, #2c2c2c), color-stop(100%, #1c1c1c), color-stop(100%, #2b2b2b), color-stop(100%, #111111), color-stop(100%, black), color-stop(100%, #131313));
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #4c4c4c), color-stop(25%, #595959), color-stop(51%, #666666), color-stop(76%, #474747), color-stop(100%, #2c2c2c));
   /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  background: -webkit-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c);
   /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  background: -o-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%);
   /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  background: -ms-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%);
   /* IE10+ */
-  background: linear-gradient(to bottom, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  background: linear-gradient(to bottom, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%);
   /* W3C */
   position: fixed;
   left: 0;
@@ -763,21 +764,100 @@ header ul li a:hover {
   color: #eaeaea;
 }
 
-/*-------Footer-------*/
+/*------------Section #about------------*/
+section#about {
+  position: relative;
+  padding-bottom: 1em;
+  border-bottom: 1px solid white;
+}
+
+#about h2 {
+  margin: 0;
+  font-size: 1.5em;
+}
+
+#about img {
+  width: 12.5em;
+  height: 12.5em;
+  margin: 1.5em;
+}
+
+#about p {
+  position: absolute;
+  left: 16em;
+  top: 5em;
+}
+
+/*#about p:after{
+	content: "";
+	clear: both;
+	display: block;
+}*/
+#about p span {
+  position: absolute;
+  left: 0em;
+  top: 5em;
+}
+
+#about p span a {
+  background: #f3c5bd;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #ea2803 0%, #ff6600 50%, #c72200 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ea2803), color-stop(50%, #ff6600), color-stop(100%, #c72200));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #ea2803 0%, #ff6600 50%, #c72200 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #ea2803 0%, #ff6600 50%, #c72200 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #ea2803 0%, #ff6600 50%, #c72200 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #ea2803 0%, #ff6600 50%, #c72200 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f3c5bd', endColorstr='#c72200',GradientType=0 );
+  /* IE6-9 */
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  padding: 0.3125em 0.5em;
+  border: 1px outset #ff6600;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+}
+
+#about p span a:hover {
+  background: #f3c5bd;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #ea6100 0%, #fc9b00 50%, #ea6100 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ea6100), color-stop(50%, #fc9b00), color-stop(100%, #ea6100));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #ea6100 0%, #fc9b00 50%, #ea6100 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #ea6100 0%, #fc9b00 50%, #ea6100 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #ea6100 0%, #fc9b00 50%, #ea6100 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #ea6100 0%, #fc9b00 50%, #ea6100 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f3c5bd', endColorstr='#ea6100',GradientType=0 );
+  /* IE6-9 */
+}
+
+/*------------Footer------------*/
 footer {
   background: #4c4c4c;
   /* Old browsers */
-  background: -moz-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  background: -moz-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%);
   /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #4c4c4c), color-stop(25%, #595959), color-stop(51%, #666666), color-stop(76%, #474747), color-stop(100%, #2c2c2c), color-stop(100%, #1c1c1c), color-stop(100%, #2b2b2b), color-stop(100%, #111111), color-stop(100%, black), color-stop(100%, #131313));
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #4c4c4c), color-stop(25%, #595959), color-stop(51%, #666666), color-stop(76%, #474747), color-stop(100%, #2c2c2c));
   /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  background: -webkit-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c);
   /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  background: -o-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%);
   /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  background: -ms-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%);
   /* IE10+ */
-  background: linear-gradient(to bottom, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c 100%, #2b2b2b 100%, #111111 100%, black 100%, #131313 100%);
+  background: linear-gradient(to bottom, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%);
   /* W3C */
   color: #c5c5c5;
 }
