--- a/css/style.css
+++ b/css/style.css
@@ -820,8 +820,9 @@ span.button a {
   color: white;
   font-weight: bold;
   padding: 0.3125em 0.5em;
-  border: 1px outset #ff6600;
+  border: 1px solid #ff6600;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+  border-radius: 0.5em;
 }
 
 span.button a:hover {
@@ -846,33 +847,57 @@ span.button a:hover {
 /*------------Section #travaux------------*/
 section#travaux {
   border-top: 1px solid #c5c5c5;
+  margin-bottom: 3em;
 }
 
 #travaux article {
   background-color: #313131;
-  color: #eaeaea;
+  color: white;
+  border-radius: 1em;
 }
 
 #travaux article a {
-  background-color: red;
-  opacity: 0.5;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0);
+  padding: 0.5em 0.5em 1em 0.5em;
+  display: block;
+  border-radius: 1em;
+  margin-bottom: 1.5em;
+  border: 2px solid #313131;
+}
+
+#travaux article.travail1 a {
+  background-image: url("img/LoLActu.png");
+}
+
+#travaux article.travail2 a {
+  background-image: url("img/HeroesOfTheStorm.png");
+}
+
+#travaux article.travail3 a {
+  background-image: url("img/ConfrerieDesTraducteursSkyrim.png");
+}
+
+#travaux article.travail4 a {
+  background-image: url("img/BiblioPHP.png");
+  margin-bottom: 2.5em;
+}
+
+#travaux article a:hover {
+  transform: scale(1.05, 1.05);
+  background-color: #dc4123;
+  color: white;
+  transition: color 1000ms ease;
+  transition: background 1000ms ease;
+  transition: transform 500ms ease;
 }
 
 /*------------Footer------------*/
 footer {
-  background: #4c4c4c;
-  /* Old browsers */
-  background: -moz-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%);
-  /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #4c4c4c), color-stop(25%, #595959), color-stop(51%, #666666), color-stop(76%, #474747), color-stop(100%, #2c2c2c));
-  /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%, #1c1c1c);
-  /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%);
-  /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%);
-  /* IE10+ */
-  background: linear-gradient(to bottom, #4c4c4c 0%, #595959 25%, #666666 51%, #474747 76%, #2c2c2c 100%);
-  /* W3C */
+  background-color: #313131;
   color: #c5c5c5;
+  width: 100%;
+  position: absolute;
+  bottom: -43em;
+  left: 0;
 }
